Move event to initClientHooks, respond to internal feedback